# chess

./: .gitignore  Pipfile  README.md  abc.ipynb  create_dataset.py  create_tfrecord.py  demo.py  download_data.sh  label.py  pyproject.toml  train.ipynb  util.py
.circleci/: config.yml
chess/: board.py  chess.py  labels.py  preparation.py  preprocessing.py  tfrecord.py
preprocessing/: board.py  create_tfrecord.py  sample.py
test/: test_board.py  test_preparation.py
test/assets/sample_export/: .gitignore  chess-export.json
test/chess/: test_preparation.py  test_tfrecord.py
test/preprocessing/: test_sample.py
