[tool.poetry]
name = "chess"
version = "0.1.0"
description = "Identify chess positions using machine learning"
authors = ["Georg Wölflein <georgw7777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
pillow = "^8.2.0"
matplotlib = "^3.3.0"
pandas = "^1.1.0"
imgaug = "^0.4.0"
numpy = "<1.19.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.2"
autopep8 = "^1.5.4"
pylint = "^2.5.3"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
